attempted to fix sub button color on safari

--- a/src/scss/components/landing/hero/title-area/_title-area.scss
+++ b/src/scss/components/landing/hero/title-area/_title-area.scss
@@ -229,13 +229,14 @@ div.hero-subscribe-to-email-list-container {
       false,
       #fffefe
     );
+    appearance: none;
     cursor: pointer;
     display: block;
     margin: 0 0 0 auto;
     &:hover {
       background: #5555cf;
-      transition: background 0.5s ease-in;
-      transition: background 0.5s ease-out;
+      transition: background-color 0.5s ease-in;
+      transition: background-color 0.5s ease-out;
     }
   }
 }
